# sim2real-soarm-benchmark

./: .gitignore  README.md  pyproject.toml
assets/so101/: README.md  SOURCE_COMMIT.txt
configs/: act.yaml  eval_real.yaml  randomization.yaml  scene.yaml  smolvla.yaml
scripts/: build_cotrain_dataset.py  eval_policy_sim.py  generate_demos.sh  replay_dataset.py  set_task.py  train_act.sh  train_smolvla.sh  tune_mount.py  tune_wrist.py  view_scene.py
sim2real_soarm/data/: record.py
sim2real_soarm/sim/: expert.py  ik.py  kinematics.py  randomization.py  rollout.py  scene.py
sim2real_soarm/soarm_eval/: harness.py  infer.py  metrics.py  run.py
tests/: test_dataset_schema.py  test_expert.py  test_kinematics.py  test_randomization.py  test_scene.py
