[project]
name = "sim2real-soarm-benchmark"
version = "0.1.0"
description = "Train a bimodal pick-and-place policy entirely in MuJoCo and deploy it zero-shot on the real SO-ARM101."
requires-python = "==3.13.*"
dependencies = [
    # Simulation
    "mujoco>=3.2.0",
    "mink>=0.0.5",            # differential-IK helper for the scripted expert
    # Policy / dataset / real-robot stack (same as the sibling repos)
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "lerobot[smolvla,feetech]>=0.3.0",
    # Recording / IO
    "numpy>=1.26.0",
    "av>=12.0.0",
    "opencv-python>=4.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "imageio[ffmpeg]>=2.34.0",   # quick GIFs for the debug rollout viewer
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim2real_soarm"]

[tool.ruff]
line-length = 100
target-version = "py313"
